# fastapi_sample

./: .env_sample  Dockerfile  README.md  docker-compose-postgres.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
app/: config.py  database.py  dependencies.py  main.py
app/models/: videos.py
app/repositories/: repository.py  video_repository.py
app/routers/: videos.py
app/schemas/: query.py
